--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>React Redux React-Router with Webpack Boilerplate</title>
-    <meta name="description" content="React Redux React-Router with Webpack Boilerplate">
+    <title>WebSnap</title>
+    <meta name="description" content="A disappearing photo messaging app in the vein of SnapChat">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
